# fjordwl

./: .gitignore  LICENSE  LICENSE.mango  README.md  config.def.h  config.h  fjordwl.scm  format.sh  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: sync-website.yml
assets/: config.conf  fjordwl.desktop
docs/: faq.md  index.md  installation.md  ipc.md  meta.json  quick-start.md
docs/bindings/: index.mdx  keys.md
docs/configuration/: basics.md  index.mdx  input.md  monitors.md  xdg-portals.md
docs/visuals/: animations.md  effects.md  index.mdx  status-bar.md
docs/window-management/: layouts.md  rules.md  scratchpad.md
mmsg/: mmsg.c
protocols/: dwl-ipc-unstable-v2.xml
rofi/brightness/: brightness.rasi  brightness.sh
rofi/calc/: calc.rasi  calc.sh
rofi/calc/shared/: fonts.rasi
rofi/clipboard/: clipboard.rasi  clipboard.sh
rofi/colors/: gruvfjord.rasi
rofi/emoji/: emoji.rasi  emoji.sh
rofi/emoji/shared/: colors.rasi
rofi/media/: media.rasi  media.sh
rofi/note/: note.rasi  note.sh
rofi/powermenu/: powermenu.conf.example  powermenu.rasi  powermenu.sh
rofi/powermenu/shared/: colors.rasi  fonts.rasi
rofi/runner/: runner.rasi  runner.sh
rofi/scripts/: rofi-common.sh
rofi/stretchly/: menu.rasi  stretchly.sh
rofi/stretchly/shared/: fonts.rasi
rofi/themes/: gruvfjord.rasi
rofi/themes/shared/: fonts.rasi
rofi/timer/: timer.rasi  timer.sh
rofi/utility/: update.sh  utility.rasi  utility.sh
rofi/wallpaper/: wallpaper.rasi  wallpaper.sh
rofi/windows/: windows.rasi  windows.sh
rofi/workspaces/: workspaces.rasi  workspaces.sh
src/: fjordwl.c
src/animation/: client.h  layer.h
src/client/: client.h
src/common/: util.c  util.h
src/config/: init.h  parse_config.h  preset.h  types.h
src/data/: static_keymap.h
src/dispatch/: bind_declare.h  bind_define.h
src/ext-protocol/: dwl-ipc.h  foreign-toplevel.h  tablet.h  tearing.h  text-input.h
src/fetch/: client.h  common.h  monitor.h
src/layout/: arrange.h  horizontal.h  layout.h  vertical.h
